--- a/Classeur_Magic_Application/appsettings.Development.json
+++ b/Classeur_Magic_Application/appsettings.Development.json
@@ -5,5 +5,8 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "ConnectionStrings": {
+    "DevelopmentConnection": "Server=(LocalDb)\\MSSQLLocalDB;Database=ClasseurMagicDb;Trusted_Connection=True;"
   }
 }
