--- a/Classeur_Magic_Application/Web.csproj
+++ b/Classeur_Magic_Application/Web.csproj
@@ -10,6 +10,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.7" />
     <PackageReference Include="MtgApiManager.Lib" Version="1.2.2" />
     <PackageReference Include="Serilog" Version="2.9.0" />
   </ItemGroup>
