Move Archi and Object

--- a/Classeur_Magic_Application/appsettings.Development.json
+++ b/Classeur_Magic_Application/appsettings.Development.json
@@ -7,6 +7,6 @@
     }
   },
   "ConnectionStrings": {
-    "DevelopmentConnection": "Server=(LocalDb)\\MSSQLLocalDB;Database=ClasseurMagicDb;Trusted_Connection=True;"
+    "SQLSERVER_Connection": "Server=(LocalDb)\\MSSQLLocalDB;Database=ClasseurMagicDb;Trusted_Connection=True;"
   }
 }
